--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,13 @@
     position: relative;
 }
 .et_pb_image_overlay img.overlay {
-    display: block;
-    position:absolute;
+    display: block !important;
+    position:absolute !important;
     top: 0;
     left: 0;
     opacity: 0;
     z-index: 1;
-    transition: opacity 0.4s ease 0s;
+    transition: opacity 0.4s ease 0s !important;
 }
 .aw-show-overlay {
     opacity:1 !important;
